<?xml version="1.0"?>
<package format="3">

  <name>moveit_python</name>
  <version>0.4.5</version>
  <description>
    A pure-python interaface to the MoveIt! ROS API.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="fergs@botnuvo.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/moveit_python</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pyassimp</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pyassimp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
